-
Bug
-
Resolution: Done
-
P2: Important
-
5.3.1
-
Windows
Ubuntu 14.04
-
6ecc1e800649ce037008af4afd09a9c5d8648418
When Fusion style is used font settings are not working with QComboBox.
#include "mainwindow.h" #include <QApplication> #include <QComboBox> #include <QProxyStyle> #include <QPainter> int main(int argc, char *argv[]) { QApplication a(argc, argv); QComboBox box; box.addItems(QStringList() << "one" << "two" << "three"); QFont font; font.setBold(true); font.setItalic(true); font.setPixelSize(20); box.setItemData(0, font, Qt::FontRole); box.show(); return a.exec(); }